# plover_stenograph_usb

./: README.rst  plover_stenograph_usb.py  setup.cfg
