[metadata]
name = plover_stenograph_usb
version = 0.0.1
description = Implementation of Stenograph USB protocol for Diamanté and Luminex machines. Based on work by Ted Morin and Keith McCready.
long_description = file: README.rst
author = Stanley Sakai
author_email = sakai.stanley@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/stanographer/plover_stenograph_usb
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
tests_require =
	mock
install_requires =
	plover>=4.0.0.dev6
	more_itertools
	pyusb
py_modules =
	plover_stenograph_usb

[options.entry_points]
plover.machine =
	Stenograph USB = plover_stenograph_usb:Stenograph

# vim: commentstring=#\ %s list