[metadata]
name = plover_stenograph_usb
version = 1.1.0
description = Stenograph USB protocol for Diamanté and Luminex machines for Plover
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/plover_stenograph_usb
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
tests_require =
	mock
install_requires =
	plover>=4.0.0.dev5
	more_itertools
	pyusb>=1.0.0; platform_system != "Windows"
	pyusb_libusb1_backend; platform_system != "Windows"
py_modules =
	plover_stenograph_usb

[options.entry_points]
plover.machine =
	Stenograph USB = plover_stenograph_usb:Stenograph

# vim: commentstring=#\ %s list
